kubernetes/apps/network/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-echo-routing
  namespace: default # The destination namespace
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: network # The source namespace
  to:
    - group: "" # Core API Group for Services
      kind: Service
