kubernetes/apps/network/2048-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: twenty-forty-eight
  namespace: network
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - 2048.kadenzobel.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: twenty-forty-eight
          namespace: default
          port: 80
