kubernetes/apps/network/echo-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo
  namespace: network
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: network
  hostnames:
    - "echo.kadenzobel.com"
  rules:
    - backendRefs:
        - name: echo
          port: 8080
